--- a/public/modules/document/views/list-document.client.view.html
+++ b/public/modules/document/views/list-document.client.view.html
@@ -7,11 +7,11 @@
         <div ui-tree-handle class="tree-node tree-node-content">
 
             <a class="btn btn-success btn-xs" ng-if="node.children && node.children.length > 0" nodrag ng-click="toggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
-            {{node.title}}
+            <a href={{node.url}} ng-if="node.url" target="_blank">{{node.name}}</a>
+            <a ng-if="!node.url" >{{node.name}}</a>
 
-            <!--<a class="pull-right btn btn-danger btn-xs" nodrag ng-click="openConfirmWithPreCloseCallbackInlinedWithNestedConfirm()"><span class="glyphicon glyphicon-remove"></span></a>-->
-            <<a class="pull-right btn btn-danger btn-xs" nodrag ng-click="deleteNode(this)"><span class="glyphicon glyphicon-remove"></span></a>
-            <a class="pull-right btn btn-primary btn-xs" nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
+            <a class="pull-right btn btn-danger btn-xs" nodrag ng-click="deleteNode(this)"><span class="glyphicon glyphicon-remove"></span></a>
+            <a class="pull-right btn btn-primary btn-xs" nodrag ng-click="openConfirmWithPreCloseCallbackInlinedWithNestedConfirm(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
         </div>
         <ol ui-tree-nodes="" ng-model="node.children" ng-class="{hidden: collapsed}">
             <li ng-repeat="node in node.children" ui-tree-node ng-include="'nodes_renderer.html'" data-collapsed="false">
