--- a/public/modules/document/views/list-document.client.view.html
+++ b/public/modules/document/views/list-document.client.view.html
@@ -1,8 +1,8 @@
-<section data-ng-controller="DocumentController">
+<section data-ng-controller="DocumentController" >
     <div class="page-header">
         <h1>Documents</h1>
     </div>
-
+    <div data-ng-show="data.$resolved && data.length">
     <script type="text/ng-template" id="nodes_renderer.html">
         <div ui-tree-handle class="tree-node tree-node-content">
 
@@ -10,8 +10,8 @@
             <a href={{node.url}} ng-if="node.url" target="_blank">{{node.name}}</a>
             <a ng-if="!node.url" >{{node.name}}</a>
 
-            <a class="pull-right btn btn-danger btn-xs" nodrag ng-click="deleteNode(this)"><span class="glyphicon glyphicon-remove"></span></a>
-            <a class="pull-right btn btn-primary btn-xs" nodrag ng-click="openConfirmWithPreCloseCallbackInlinedWithNestedConfirm(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
+            <a class="pull-right btn btn-danger btn-xs"  ng-if="node.isFolder" nodrag ng-click="deleteNode(this)"><span class="glyphicon glyphicon-remove"></span></a>
+            <a class="pull-right btn btn-primary btn-xs"  nodrag ng-click="openConfirmWithPreCloseCallbackInlinedWithNestedConfirm(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
         </div>
         <ol ui-tree-nodes="" ng-model="node.children" ng-class="{hidden: collapsed}">
             <li ng-repeat="node in node.children" ui-tree-node ng-include="'nodes_renderer.html'" data-collapsed="false">
@@ -23,5 +23,9 @@
         <ol ui-tree-nodes ng-model="data">
             <li  ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'" data-collapsed="false"></li>
         </ol>
+    </div>
+    </div>
+    <div class="alert alert-warning text-center" data-ng-hide="!data.$resolved || data.length">
+        Inital Root folder not created yet, click to <a ng-click="createRootNode()">create one</a>?
     </div>
 </section>
