--- a/public/modules/document/views/edit-document.client.view.html
+++ b/public/modules/document/views/edit-document.client.view.html
@@ -14,7 +14,7 @@
             <a class="pull-right btn btn-primary btn-xs" ng-if="node.isFolder" nodrag ng-click="openConfirmWithPreCloseCallbackInlinedWithNestedConfirm(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
         </div>
         <ol ui-tree-nodes="" ng-model="node.children" ng-class="{hidden: collapsed}">
-            <li ng-repeat="node in node.children" ui-tree-node ng-include="'nodes_renderer.html'" data-collapsed="false">
+            <li ng-repeat="node in node.children"  ng-if="node.isFolder" ui-tree-node ng-include="'nodes_renderer.html'" data-collapsed="false">
             </li>
         </ol>
     </script>
