--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -2,93 +2,97 @@
 	<div class="jumbotron text-center">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-				<img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/img/brand/logo.png" />
+				<img alt="MEAN.JS" class="img-responsive text-center" src="http://cdns2.freepik.com/free-photo/logo-sample-text_355-558.jpg" />
 			</div>
 		</div>
 		<br>
 		<div class="row">
 			<p class="lead">
-				Open-Source Full-Stack Solution For MEAN Applications
+				DocStore CloudSearch is a managed service in the AWS Cloud that makes it simple and cost-effective to set up, manage, and scale a custom search solution for your scanned documents.
 			</p>
 		</div>
 		<div class="row">
 			<p>
-				<a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>
+				<a class="btn btn-primary btn-lg" href="#" target="_blank">Learn more</a>
 			</p>
 		</div>
 	</div>
 	<div>
-		<h2>Congrats! You've configured and run the sample application.</h2>
-		<p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>
-		<p>This sample application tracks users and articles.</p>
-		<ul>
-			<li>
-				Click
-				<em>Signup</em>
-				to get started.
-			</li>
-			<li>
-				Configure your app to work with your social accounts, by editing the
-				<em>/config/env/*.js</em>
-				files.
-			</li>
-			<li>
-				Edit your users module.
-			</li>
-			<li>
-				Add new CRUD modules.
-			</li>
-			<li>
-				Have fun...
-			</li>
-		</ul>
+		<!--<h2>Congrats! You've configured and run the sample application.</h2>-->
+		<!--<p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>-->
+		<!--<p>This sample application tracks users and articles.</p>-->
+		<!--<ul>-->
+			<!--<li>-->
+				<!--Click-->
+				<!--<em>Signup</em>-->
+				<!--to get started.-->
+			<!--</li>-->
+			<!--<li>-->
+				<!--Configure your app to work with your social accounts, by editing the-->
+				<!--<em>/config/env/*.js</em>-->
+				<!--files.-->
+			<!--</li>-->
+			<!--<li>-->
+				<!--Edit your users module.-->
+			<!--</li>-->
+			<!--<li>-->
+				<!--Add new CRUD modules.-->
+			<!--</li>-->
+			<!--<li>-->
+				<!--Have fun...-->
+			<!--</li>-->
+		<!--</ul>-->
 	</div>
 	<div class="row">
 		<div class="col-md-3">
 			<h2>
-				<strong>M</strong>ongoDB
+				<strong>R</strong>ich Search Features
 			</h2>
-			<p><a target="_blank" href="http://mongodb.org/">MongoDB</a> is a database. MongoDB's <a target="_blank" href="http://docs.mongodb.org/manual/">great manual</a> is the place to get started with NoSQL and MongoDB.</p>
+			<p>CloudSearch supports powerful search features such as:
+				Free text, Boolean, and Faceted search
+				Autocomplete suggestions
+				Customizable relevance ranking and query-time rank expressions
+				Field weighting</p>
 		</div>
 		<div class="col-md-3">
 			<h2>
-				<strong>E</strong>xpress
+				<strong>S</strong>calable
 			</h2>
-			<p><a target="_blank" href="http://expressjs.com/"> Express</a> is an app server. Check out <a target="_blank" href="http://expressjs.com/guide.html">The Express Guide</a> or <a target="_blank" href="http://stackoverflow.com/questions/8144214/learning-express-for-node-js">StackOverflow</a> for more info.</p>
+			<p>CloudSearch offers powerful autoscaling for all search domains. As your data or query volume changes, CloudSearch can scale your search domain's resources up or down as needed. You can control scaling if you know that you need more capacity for bulk uploads or are expecting a surge in search traffic.</p>
 		</div>
 		<div class="col-md-3">
 			<h2>
-				<strong>A</strong>ngularJS
+				<strong>R</strong>eliable
 			</h2>
 			<p>AngularJS is web app framework. <a target="_blank" href="http://angularjs.org/">Angular's website</a> offers a lot. The <a target="_blank" href="http://www.thinkster.io/">Thinkster Popular Guide</a> and <a target="_blank" href="https://egghead.io/">Egghead Videos</a> are great resources.</p>
 		</div>
 		<div class="col-md-3">
 			<h2>
-				<strong>N</strong>ode.js
+				<strong>H</strong>igh Performance
 			</h2>
-			<p><a target="_blank" href="http://nodejs.org/">Node.js</a> is a web server. Node's website and this <a target="_blank" href="http://stackoverflow.com/questions/2353818/how-do-i-get-started-with-node-js">stackOverflow thread</a> offer excellent starting points to get to grasps with node.</p>
+			<p>CloudSearch ensures low latency and high throughput performance, even at large scale.</p>
 		</div>
 	</div>
-	<div class="well">
-		<h2>MEAN.JS Documentation</h2>
-		<p>
-			Once you're familiar with the foundation technology, check out the MEAN.JS Documentation:
-			<ul>
-				<li><a target="_blank" href="http://meanjs.org/docs.html">MEAN.JS Documentation</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/generator.html">Yeoman Generator</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/modules.html">Modules</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/changelog.html">Changelog</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/community.html">Community</a>
-				</li>
-				<li><a target="_blank" href="http://blog.meanjs.org">Blog</a>
-				</li>
-			</ul>
-		</p>
-	</div>
-	<br>Enjoy &amp; Keep Us Updated,
-	<br>The MEAN.JS Team.
+	<!--<div class="well">-->
+		<!--<h2>MEAN.JS Documentation</h2>-->
+		<!--<p>-->
+			<!--Once you're familiar with the foundation technology, check out the MEAN.JS Documentation:-->
+			<!--<ul>-->
+				<!--<li><a target="_blank" href="http://meanjs.org/docs.html">MEAN.JS Documentation</a>-->
+				<!--</li>-->
+				<!--<li><a target="_blank" href="http://meanjs.org/generator.html">Yeoman Generator</a>-->
+				<!--</li>-->
+				<!--<li><a target="_blank" href="http://meanjs.org/modules.html">Modules</a>-->
+				<!--</li>-->
+				<!--<li><a target="_blank" href="http://meanjs.org/changelog.html">Changelog</a>-->
+				<!--</li>-->
+				<!--<li><a target="_blank" href="http://meanjs.org/community.html">Community</a>-->
+				<!--</li>-->
+				<!--<li><a target="_blank" href="http://blog.meanjs.org">Blog</a>-->
+				<!--</li>-->
+			<!--</ul>-->
+		<!--</p>-->
+	<!--</div>-->
+	<!--<br>Enjoy &amp; Keep Us Updated,-->
+	<!--<br>The MEAN.JS Team.-->
 </section>
