fixed upload bugs

--- a/public/modules/document/views/folder-document.popup.client.view.html
+++ b/public/modules/document/views/folder-document.popup.client.view.html
@@ -1,8 +1,7 @@
 <div class="ngdialog-message" ng-init="doc.IsFolder=true">
     <h3>Create Folder</h3>
     <div ng-show="doc.IsFolder">
-        <label for="docNodeName">Name of Folder: </label>
-        <input type="text" id="docNodeName" name="docName" class="form-control" data-ng-model="doc.Name" placeholder="Document Name">
+        <input type="text" id="docNodeName" name="docName" class="form-control" data-ng-model="doc.Name" placeholder="Folder Name">
     </div>
 </div>
 <div class="ngdialog-buttons">
