--- a/public/modules/document/views/upload-document.client.view.html
+++ b/public/modules/document/views/upload-document.client.view.html
@@ -11,7 +11,7 @@
             <a ng-if="!node.url" >{{node.name}}</a>
 
             <a class="pull-right btn btn-danger btn-xs" ng-if="!node.isFolder" nodrag ng-click="deleteNode(this)"><span class="glyphicon glyphicon-remove"></span></a>
-            <a class="pull-right btn btn-primary btn-xs" ng-if="node.isFolder" nodrag ng-click="openConfirmWithPreCloseCallbackInlinedWithNestedConfirm(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
+            <a class="pull-right btn btn-primary btn-xs" ng-if="node.isFolder" nodrag ng-click="openConfirmWithPreCloseCallbackInlinedWithNestedConfirm(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-cloud-upload"></span></a>
         </div>
         <ol ui-tree-nodes="" ng-model="node.children" ng-class="{hidden: collapsed}">
             <li ng-repeat="node in node.children" ui-tree-node ng-include="'nodes_renderer.html'" data-collapsed="false">
